erDiagram
    User ||--o{ Attendance : "attendances"
    User ||--o{ LeaveRequest : "leaveRequests"
    User ||--o{ ShiftAssignment : "shifts"

    User {
        String id PK
        String name
    }

    Attendance {
        String id PK
        DateTime date
        DateTime clockIn
        DateTime clockOut
        String status
        String anomaly
    }

    LeaveRequest {
        String id PK
        DateTime startDate
        DateTime endDate
        String type
        String status
        String reason
    }

    ShiftAssignment }|--|| Shift : "shift"
    Shift {
        String id PK
        String name
        String startTime
        String endTime
    }
    ShiftAssignment {
        String id PK
        DateTime date
    }
